Beträge werden immer in Cents persistiert